# realtime_commerce_analytics

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
dashboards/: queries.sql
dashboards/grafana/dashboards/: commerce-analytics.json
dashboards/grafana/provisioning/dashboards/: dashboard.yml
dashboards/grafana/provisioning/datasources/: clickhouse.yml
sample-data/: events.jsonl  generate.py  replay.py
scripts/: init_clickhouse.py  reset_clickhouse.py
src/realtime_commerce_analytics/: config.py
src/realtime_commerce_analytics/api/: main.py
src/realtime_commerce_analytics/events/: models.py
src/realtime_commerce_analytics/processor/: metrics.py  worker.py
src/realtime_commerce_analytics/storage/: clickhouse.py
src/realtime_commerce_analytics_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_metrics.py
