[project]
name = "realtime-commerce-analytics-platform"
version = "0.1.0"
description = "Local real-time commerce analytics platform for GMV, orders, refunds, and conversion metrics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clickhouse-connect>=0.8.0",
    "confluent-kafka>=2.6.0",
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dateutil>=2.9.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
    "httpx>=0.27.0",
]
flink = [
    "apache-flink>=1.19.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts", "sample-data"]
